[gd_scene load_steps=22 format=2]

[ext_resource path="res://images/BACKGROUNDDDD.png" type="Texture" id=1]
[ext_resource path="res://Scripts/menu_inicial.gd" type="Script" id=2]
[ext_resource path="res://SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/BOTAO_EXIT_ROSA.png" type="Texture" id=4]
[ext_resource path="res://images/BOTAO_PLAY_BRANCO.png" type="Texture" id=5]
[ext_resource path="res://images/botao_creditos_rosa.png" type="Texture" id=6]
[ext_resource path="res://images/Probots-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://images/BOTAO_PLAY_ROSA.png" type="Texture" id=8]
[ext_resource path="res://images/BOTAO_EXIT_BRANCO.png" type="Texture" id=9]
[ext_resource path="res://images/botao_creditos_branco.png" type="Texture" id=10]
[ext_resource path="res://Mouse_Cursor.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="Theme" id=5]
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]

[sub_resource type="StyleBoxFlat" id=11]

[sub_resource type="StyleBoxFlat" id=12]

[sub_resource type="StyleBoxFlat" id=13]

[sub_resource type="Theme" id=14]
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 12 )
Button/styles/pressed = SubResource( 13 )

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="fundo_inicial" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 642, 328 )
scale = Vector2( 0.32025, 0.273263 )
texture = ExtResource( 1 )

[node name="jogar_button" type="TextureButton" parent="."]
margin_left = 509.0
margin_top = 306.0
margin_right = 1654.0
margin_bottom = 741.0
rect_min_size = Vector2( 10, 10 )
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 10, -5.00012 )
theme = SubResource( 5 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="jogar_button"]
light_mask = 2
margin_left = 67.0
margin_top = 5.0
margin_right = 140.0
margin_bottom = 34.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1

[node name="config_button" type="TextureButton" parent="."]
margin_left = 1198.0
margin_top = 16.0
margin_right = 1484.0
margin_bottom = 276.0
rect_scale = Vector2( 0.21, 0.2 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="config_button"]
light_mask = 2
margin_left = 34.0
margin_top = 5.0
margin_right = 145.0
margin_bottom = 34.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1

[node name="sair_button" type="TextureButton" parent="."]
margin_left = 518.0
margin_top = 400.0
margin_right = 1601.0
margin_bottom = 1011.0
rect_scale = Vector2( 0.21, 0.131 )
theme = SubResource( 14 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="sair_button"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 72.0
margin_top = 3.0
margin_right = 145.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1
uppercase = true

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[node name="Probots-removebg-preview" type="Sprite" parent="."]
position = Vector2( 629, 109 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="Mouse_Cursor" parent="." instance=ExtResource( 11 )]
position = Vector2( 0, 3.05176e-05 )

[connection signal="pressed" from="jogar_button" to="." method="_on_jogar_button_pressed"]
[connection signal="pressed" from="config_button" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="sair_button" to="." method="_on_sair_button_pressed"]
